# tfxc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: config.yaml
tfxc/: __init__.py  bigquery.py
