[tool.poetry]
name = "tfxc"
version = "0.1.0"
description = "Custom components for TFX Pipelines."
license = "MIT"
authors = ["sfujiwara <shuhei.fujiwara@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.7, < 3.9"
tfx = {version = "^1.0.0-rc.0", allow-prereleases = true}
google-cloud-bigquery = "^1.28.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
jupyter = "^1.0.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
